ressolved issue 106 and fixed alignment of footer text

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -7,3 +7,12 @@
         display: none;
     }
 }
+
+.icons-container{
+    padding-bottom: 1rem;
+}
+
+.footer-text{
+    display: flex;
+    align-items: center;
+}
